--- a/404.html
+++ b/404.html
@@ -14,124 +14,96 @@
     <title>Access Granted | 404 - Page Not Found </title>
 
 </head>
+
 <body class="relative">
-    <a href="#main-content" class="skip-link">Skip to main content</a>
-    
-    <header class="fixed-top">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
-              class="d-inline-block align-top">
-            Access Granted
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item mt-2">
-                <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-              </li>
-              <li class="nav-item mt-2">
-                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-              </li>
-              <li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
-                  data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
-                    class="fas fa-universal-access"></i> Accessibility</button></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+  <a href="#main-content" class="d-none">Skip to main content</a>
 
-      <!-- Canvas sidebar -->
+  <header class="fixed-top">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
+            class="d-inline-block align-top">
+          Access Granted
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
+            </li>
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+            </li>
+            <li class="nav-item mt-2">
+              <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+            </li>
+            <li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+                  class="fas fa-universal-access"></i> Accessibility</button></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!-- Canvas sidebar -->
   <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-  aria-labelledby="offcanvasWithBothOptionsLabel">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <ul class="list-unstyled p-3" aria-labelledby="navbarDropdown">
-      <li class="mb-3">
-        <div class="dropdown-item">
-          <label class="form-label">Font Size</label>
-          <div class="d-flex flex-column">
-            <div class="btn-group" role="group" aria-label="Font Size">
-              <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small"
-                autocomplete="off">
-              <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
+    aria-labelledby="offcanvasWithBothOptionsLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <ul class="list-unstyled p-3">
+        <li class="mb-3">
+          <div class="dropdown-item">
+            <label class="form-label">Font Size</label>
+            <div class="d-flex flex-column">
+              <div class="btn-group" role="group" aria-label="Font Size">
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small">
+                <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
 
-              <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
-                value="medium" autocomplete="off" checked>
-              <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
+                  value="medium" checked>
+                <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
 
-              <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large"
-                autocomplete="off">
-              <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
+                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large">
+                <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
+              </div>
             </div>
           </div>
-        </div>
-      </li>
-      <li class="mb-3">
-        <div class="dropdown-item">
-          <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-            <input class="form-check-input font-switch" type="checkbox" id="fontSwitch1" aria-label="Font switch">
-            <label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
-          </div>
-        </div>
-      </li>
-      <li class="mb-3">
-        <div class="dropdown-item">
-          <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-            <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-            <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast Mode</label>
-          </div>
-        </div>
-      </li>
-      <li class="mb-3">
-        <div class="dropdown-item">
-          <label class="form-label">Colorblind Mode</label>
-          <div class="d-flex flex-column">
-            <div class="btn-group-vertical w-100" role="group" aria-label="Colorblind Mode">
-              <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="normalVision" value=""
-                autocomplete="off" checked>
-              <label class="btn btn-outline-secondary" for="normalVision">Normal Vision</label>
-
-              <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="deuteranopia"
-                value="deuteranopia" autocomplete="off">
-              <label class="btn btn-outline-secondary" for="deuteranopia">Deuteranopia</label>
-
-              <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="protanopia"
-                value="protanopia" autocomplete="off">
-              <label class="btn btn-outline-secondary" for="protanopia">Protanopia</label>
-
-              <input type="radio" class="btn-check colorblind-option" name="colorblindMode" id="tritanopia"
-                value="tritanopia" autocomplete="off">
-              <label class="btn btn-outline-secondary" for="tritanopia">Tritanopia</label>
+        </li>
+        <li class="mb-3">
+          <div class="dropdown-item">
+            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
+              <input class="form-check-input font-switch" type="checkbox" id="fontSwitch1" aria-label="Font switch">
+              <label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
             </div>
           </div>
-        </div>
-      </li>
-      <li class="mb-3">
-        <a class="dropdown-item" href="accessibility-guide.html"><i class="fas fa-book"></i> Accessibility Guide</a>
-      </li>
-    </ul>
+        </li>
+        <li class="mb-3">
+          <div class="dropdown-item">
+            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
+              <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
+              <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
 
-    <main id="main-content" class="container my-5 error-background">
+    <main id="main-content" class="container my-5 main-background">
         <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-                <h1 class="display-1" style="font-weight: bold;">404</h1>
-                <h2 class="mb-4"><strong>Oops! Access NOT Granted</strong></h2>
-                <p class="lead mb-5"><strong>We couldn't find the page you're looking for. It might have been moved or doesn't exist.</strong></p>
-                <a href="index.html" class="btn btn-primary btn-lg">Return to Home</a>
+            <div class="col-md-8 text-center error-background">
+                <h1 class="display-1 error-h1 mt-5">404</h1>
+                <h2 class="mb-4 error-h2"><strong>Oops! Access NOT Granted</strong></h2>
+                <p class="lead mb-5 error-paragraph"><strong>We couldn't find the page you're looking for. It might have been moved or doesn't exist.</strong></p>
+                <a href="index.html " class="btn btn-primary btn-lg error-button">Return to Home</a>
 
             </div>
         </div>
