--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-    content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
-  <meta name="keywords" content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
+		content="Explore Access Granted's accessibility, inclusiveness and availability for all. Access a wide range of different functions for accessibility">
+	<meta name="keywords"
+		content="Accessible, accessibility, inclusive, inclusiveness, for everyone, a website for all">
 	<!-- Link head tags -->
 	<link rel='shortcut icon' href="assets/images/logo.webp">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +17,7 @@
 	<!-- Script from previous head iteration, Not sure if it should be here or at bottom of the page..  -->
 	<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 	</script>
-  </head>
+</head>
 
 
 
@@ -27,152 +28,173 @@
 
 	<header class="fixed-top">
 		<nav class="navbar navbar-expand-lg">
-		  <div class="container">
-			<a class="navbar-brand" href="index.html">
-			  <img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
-				class="d-inline-block align-top">
-			  Access Granted
-			</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-			  aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-			  <span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarContent">
-			  <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-				<li class="nav-item mt-2">
-				  <a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img src="assets/images/logo.webp" alt="Access Granted Logo" width="30" height="30"
+						class="d-inline-block align-top">
+					Access Granted
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+					aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item mt-2">
+							<a class="nav-link" href="resources.html"><i class="fas fa-book"></i> Resources</a>
+						</li>
+						<li class="nav-item mt-2">
+							<a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+						</li>
+						<li class="nav-item mt-2">
+							<a class="nav-link active" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+						</li>
+						<li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
+								data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
+									class="fas fa-universal-access"></i> Accessibility</button></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+
+	<!-- Canvas sidebar -->
+	<div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
+		aria-labelledby="offcanvasWithBothOptionsLabel">
+		<div class="offcanvas-header">
+			<h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
+			<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+		</div>
+		<div class="offcanvas-body">
+			<ul class="list-unstyled p-3">
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<label class="form-label">Font Size</label>
+						<div class="d-flex flex-column">
+							<div class="btn-group" role="group" aria-label="Font Size">
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeSmall" value="small">
+								<label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
+
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeMedium" value="medium" checked>
+								<label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
+
+								<input type="radio" class="btn-check font-size-option" name="fontSize"
+									id="fontSizeLarge" value="large">
+								<label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
+							</div>
+						</div>
+					</div>
 				</li>
-				<li class="nav-item mt-2">
-				  <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<div class="form-check form-switch form-switch-lg d-flex align-items-center">
+							<input class="form-check-input font-switch" type="checkbox" id="fontSwitch1"
+								aria-label="Font switch">
+							<label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
+						</div>
+					</div>
 				</li>
-				<li class="nav-item mt-2">
-				  <a class="nav-link active" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+				<li class="mb-3">
+					<div class="dropdown-item">
+						<div class="form-check form-switch form-switch-lg d-flex align-items-center">
+							<input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1"
+								aria-label="Theme switch">
+							<label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
+						</div>
+					</div>
 				</li>
-				<li><button class="btn btn-secondary mt-2" type="button" data-bs-toggle="offcanvas"
-					data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
-					  class="fas fa-universal-access"></i> Accessibility</button></li>
-			  </ul>
+			</ul>
+		</div>
+	</div>
+
+	<main id="main-content" class="container-fluid mb-5 pt-5 h-75 main-background d-flex flex-column justify-content-center">
+	  <div class="container mt-5">
+		<h1 class="my-5 text-center">Contact Us</h1>
+		<div class="row">
+		  <div class="col-md-6 mb-4">
+			<form id="contact-form" class="bg-feature-card p-4 rounded shadow-sm">
+			  <div class="mb-3">
+				<label for="name" class="form-label">Name</label>
+				<input type="text" class="form-control" id="name" name="name" required>
+			  </div>
+			  <div class="mb-3">
+				<label for="email" class="form-label">Email</label>
+				<input type="email" class="form-control" id="email" name="email" required>
+			  </div>
+			  <div class="mb-3">
+				<label for="message" class="form-label">Message</label>
+				<textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+			  </div>
+			  <div class="mb-3 form-check">
+				<input type="checkbox" class="form-check-input" id="privacyCheck" required>
+				<label class="form-check-label" for="privacyCheck">
+				  I have read and agree to the <a href="https://www.termsfeed.com/live/7364ab41-d9ad-459e-a730-f1882e830984"
+					target="_blank" rel="noopener">privacy policy</a>
+				</label>
+			  </div>
+			  <button type="submit" class="btn btn-primary w-100">Send Message</button>
+			</form>
+		  </div>
+		  <div class="col-md-6 mb-4">
+			<div class="card bg-feature-card p-4 rounded shadow-sm">
+			  <div class="card-body get-in-touch-card">
+				<h2 class="card-title">Get in Touch</h2>
+				<p class="card-text text-body">We'd love to hear from you! If you have any questions, suggestions, or just want to say hello, please don't hesitate to reach out.</p>
+				<ul class="list-unstyled text-body">
+				  <li class="mb-2">
+					<a href="mailto:info@accessgranted.com" class="text-decoration-none">
+					  <i class="bi bi-envelope-fill me-2"></i> info@accessgranted.com
+					</a>
+				  </li>
+				  <li class="mb-2">
+					<a href="tel:+1234567890" class="text-decoration-none">
+					  <i class="bi bi-telephone-fill me-2"></i> (123) 456-7890
+					</a>
+				  </li>
+				  <li class="mb-2">
+					<a href="https://www.google.com/maps/search/?api=1&query=123+Web+Accessibility+St,+Internet+City,+12345" target="_blank" class="text-decoration-none">
+					  <i class="bi bi-geo-alt-fill me-2"></i> 123 Web Accessibility St, Internet City, 12345
+					</a>
+				  </li>
+				</ul>
+			  </div>
 			</div>
 		  </div>
-		</nav>
-	  </header>
-
-  <!-- Canvas sidebar -->
-  <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions"
-    aria-labelledby="offcanvasWithBothOptionsLabel">
-    <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Accessibility Settings</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body">
-      <ul class="list-unstyled p-3">
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <label class="form-label">Font Size</label>
-            <div class="d-flex flex-column">
-              <div class="btn-group" role="group" aria-label="Font Size">
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeSmall" value="small">
-                <label class="btn btn-outline-secondary" for="fontSizeSmall">Small</label>
-
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeMedium"
-                  value="medium" checked>
-                <label class="btn btn-outline-secondary" for="fontSizeMedium">Medium</label>
-
-                <input type="radio" class="btn-check font-size-option" name="fontSize" id="fontSizeLarge" value="large">
-                <label class="btn btn-outline-secondary" for="fontSizeLarge">Large</label>
-              </div>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-              <input class="form-check-input font-switch" type="checkbox" id="fontSwitch1" aria-label="Font switch">
-              <label class="form-check-label ms-2" for="fontSwitch1">Turn on Dyslexic Font</label>
-            </div>
-          </div>
-        </li>
-        <li class="mb-3">
-          <div class="dropdown-item">
-            <div class="form-check form-switch form-switch-lg d-flex align-items-center">
-              <input class="form-check-input theme-switch" type="checkbox" id="themeSwitch1" aria-label="Theme switch">
-              <label class="form-check-label ms-2" for="themeSwitch1">Turn on High Contrast</label>
-            </div>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-	<main id="main-content" class="container-fluid my-5 main-background">
-		<h1 class="mb-4">Contact Us</h1>
-		<div class="row">
-			<div class="col-md-6">
-				<form id="contact-form">
-					<div class="mb-3">
-						<label for="name" class="form-label">Name</label>
-						<input type="text" class="form-control" id="name" name="name" required>
-					</div>
-					<div class="mb-3">
-						<label for="email" class="form-label">Email</label>
-						<input type="email" class="form-control" id="email" name="email" required>
-					</div>
-					<div class="mb-3">
-						<label for="message" class="form-label">Message</label>
-						<textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-					</div>
-					<div class="mb-3 form-check">
-						<input type="checkbox" class="form-check-input" id="privacyCheck" required>
-						<label class="form-check-label" for="privacyCheck">
-							I have read and agree to the <a href="https://www.termsfeed.com/live/7364ab41-d9ad-459e-a730-f1882e830984"
-								target="_blank" rel="noopener">privacy policy</a>
-						</label>
-					</div>
-					<button type="submit" class="btn btn-primary">Send Message</button>
-				</form>
-			</div>
-			<div class="col-md-6">
-				<h2>Get in Touch</h2>
-				<p>We'd love to hear from you! If you have any questions, suggestions, or just want to say hello, please
-					don't hesitate to reach out.</p>
-				<ul class="list-unstyled">
-					<li><i class="bi bi-envelope-fill me-2"></i> info@accessgranted.com</li>
-					<li><i class="bi bi-telephone-fill me-2"></i> (123) 456-7890</li>
-					<li><i class="bi bi-geo-alt-fill me-2"></i> 123 Web Accessibility St, Internet City, 12345</li>
-				</ul>
-			</div>
 		</div>
+	  </div>
 	</main>
 
 	<hr>
 
 	<footer class="text-muted py-5">
 		<div class="container footerdiv">
-		  <div class="row">
-			<div class="col-md-4">
-			  <h5>Social</h5>
-			  <ul class="list-unstyled">
-				<li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
-					rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)" aria-hidden="true"><i
-					  class="fa-brands fa-github"></i> Github</a></li>
-				<li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted" target="_blank"
-					rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)" aria-hidden="true"><i
-					  class="fa-brands fa-slack"></i> Slack</a></li>
-			  </ul>
+			<div class="row">
+				<div class="col-md-4">
+					<h5>Social</h5>
+					<ul class="list-unstyled">
+						<li><a href="https://github.com/VCGithubCode/access-granted" class="text-muted" target="_blank"
+								rel="noopener" aria-label="Visit our github repository page(Opens in a new tab)"
+								aria-hidden="true"><i class="fa-brands fa-github"></i> Github</a></li>
+						<li><a href="https://app.slack.com/client/T0L30B202/C080JB3ETHU" class="text-muted"
+								target="_blank" rel="noopener" aria-label="Visit our Slack channel(Opens in a new tab)"
+								aria-hidden="true"><i class="fa-brands fa-slack"></i> Slack</a></li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<h5>Site Map</h5>
+					<ul class="list-unstyled">
+						<li><a href="index.html" class="text-muted">Home</a></li>
+						<li><a href="resources.html" class="text-muted">Resources</a></li>
+						<li><a href="about.html" class="text-muted">About</a></li>
+						<li><a href="contact.html" class="text-muted">Contact</a></li>
+					</ul>
+				</div>
 			</div>
-			<div class="col-md-4">
-			  <h5>Site Map</h5>
-			  <ul class="list-unstyled">
-				<li><a href="index.html" class="text-muted">Home</a></li>
-				<li><a href="resources.html" class="text-muted">Resources</a></li>
-				<li><a href="about.html" class="text-muted">About</a></li>
-				<li><a href="contact.html" class="text-muted">Contact</a></li>
-			  </ul>
-			</div>
-		  </div>
-		  <p class="mb-1">&copy; 2024 Access Granted Project</p>
+			<p class="mb-1">&copy; 2024 Access Granted Project</p>
 		</div>
-	  </footer>
+	</footer>
 
 	<script>
 		(function () {
